--- a/FrontEnd/konutcheck-frontend/src/App.css
+++ b/FrontEnd/konutcheck-frontend/src/App.css
@@ -3,14 +3,12 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-brand{
+  margin-right: 3rem !important;
 }
 
 .App-header {
