--- a/FrontEnd/konutcheck-frontend/src/App.css
+++ b/FrontEnd/konutcheck-frontend/src/App.css
@@ -76,10 +76,12 @@
 .btn{
   background-color: #5b2f83;
   border: #5b2f83;
+  color: white;
   margin-bottom: 10px;
 }
 .btn:hover{
   background-color: #9060ab;
+  color: white;
 }
 .btn-danger:hover{
   background-color: #9060ab;
@@ -94,7 +96,12 @@
 .btn-info:hover{
   background-color: rgb(243, 138, 138);
 }
-
+.btn-danger {
+  background-color: #dc3545;
+}
+.btn-danger:hover{
+  background-color: #de5e6b;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
