--- a/FrontEnd/konutcheck-frontend/src/App.css
+++ b/FrontEnd/konutcheck-frontend/src/App.css
@@ -199,7 +199,7 @@
   font-size: 1rem;
   font-weight: 700;
   margin-top: 14px;
-  margin-left: 2px;
+  margin-left: 13px;
 }
 
 footer p{
@@ -212,7 +212,6 @@ footer p{
 
 }
 footer li{
-  display: inline-block;
   margin: 1rem;
   text-align: left;
 }
@@ -230,6 +229,9 @@ footer li{
   margin-top: 11px;
 }
 
+#mail-icon{
+  margin-right: 5px;
+}
 @media screen and (max-width: 900px) {
   .footer-item {
       width: 100%;
@@ -241,6 +243,7 @@ footer li{
 
 ul{
   list-style-type: none;
+  padding-left: 1.5rem !important;
 }
 
 @media screen and (max-width: 900px) {
